[metadata]
name = dlsVibrationTools
version = 0.0.1
author = Davide Crivelli
author_email = davide.crivelli@diamond.ac.uk
description = Vibration analysis tools for EPICS-based vibration IOC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/da-crivelli/dlsVibrationTools
project_urls =
    Bug Tracker = https://github.com/da-crivelli/dlsVibrationTools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
        vibration-report = vibration_tools:vib_report